--- a/Notebooks/20200112_EDA.Rmd
+++ b/Notebooks/20200112_EDA.Rmd
@@ -5,29 +5,36 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-getwd()
+
+library(tidyverse)
+path <- "/home/kishen/Documents/Data Science/Projects/Supermarket Sales Segmentation/Data/"
+df <- read_csv(paste(path, "supermarket.csv", sep=""))
+df <- tibble(df)
 ```
+
+
+Preview data
 ```{r}
-
+knitr::kable(head(df, 10), digits = 2, caption = "Supermarket data preview")
 ```
 
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
+**Data Overview**
 ```{r cars}
-summary(cars)
+summary(df)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+sapply(df, class)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+**Missing Values**
+```{r}
+sum(is.na(df))
+```
+## Exploratory Data Analysis
+```{r}
+ggplot(data= df, aes(x="City"))+
+  geom_bar(stat="count")
+```
+
